<!-- Vishesh Bansal N01395119 Section: RNA-->
<resources>
    <string name="app_name">Vishesh_Bansal_n01395119</string>
    <string name="red_pepper_50">Red Pepper +$.50</string>
    <string name="extra_cheese_50">Extra Cheese +$.50</string>
    <string name="pineapple_50">Pineapple +$.50</string>
    <string name="onions_50">Onions +$.50</string>
    <string name="mushroom_50">Mushroom +$.50</string>
    <string name="extra_toppings">Extra Toppings</string>
    <string name="large_8_5">Large $8.5</string>
    <string name="medium_6_5">Medium $6.5</string>
    <string name="small_4_50">Small $4.50</string>
    <string name="chicago_style_12_99">Chicago Style $12.99</string>
    <string name="cheese_5_99">Cheese $5.99</string>
    <string name="boston_style_9_99">Boston Style $9.99</string>
    <string name="hint_name_on_credit_card">Name on Credit Card</string>
    <string name="hint_credit_card_number_max_length_8">Credit Card Number (Max Length 8)</string>
    <string name="hint_address">Address</string>
    <string name="place_order">Place Order</string>
    <string name="payment_info">Payment Details</string>
    <string name="total_label">Total</string>
    <string name="summary_label">Summary</string>
    <string name="delivery_switch">Delivery</string>
    <string name="continue_button">Continue</string>
    <string name="checkout_button">Checkout</string>
    <string name="help_redirect">https://andpizza.com/contact-us/</string>
    <string name="store_name_piz">Pizza Pizza</string>
    <string name="store_name_domi">Dominos</string>
    <string name="store_name_nova">Pizza Nova</string>
    <string name="select_store_msg">Please select a store</string>
    <string name="boston_label">Boston $9.99</string>
    <string name="chesse_label">Cheese $5.99</string>
    <string name="chicago_label">Chicago $12.99</string>
    <string name="pizza_size_small">Small $4.5</string>
    <string name="pizza_size_med">Medium $6.5</string>
    <string name="pizza_size_lg">Large $8.5</string>
    <string name="top_mush">\" Mushroom +$0.50\"</string>
    <string name="top_R_pep">\" Red Pepper +$0.50\"</string>
    <string name="top_pine">\" Pineapple +$0.50\"</string>
    <string name="top_ext_cheese">\" Extra Cheese +$0.50\"</string>
    <string name="top_oni">\" Onions +$0.50\"</string>
    <string name="CCname_3_error">Min 3 characters</string>
    <string name="CCnum_error">Incomplete Invalid Number, must be 8 digits</string>
    <string name="empty_field_error">Field can\'t be empty</string>
    <string name="address_empty_error">Field can\'t be empty</string>
    <string name="confirmed_order_msg">Order Confirmed</string>
    <string name="final_dialog_dismiss">Dismiss</string>
    <string name="del_msg">\" Delivery at 9:45PM\"</string>
    <string name="pick_msg">\" Pickup at 9:45PM\"</string>
    <string name="menu_usr_name">Vishesh</string>
    <string name="menu_store_logo">storeLogo</string>
    <string name="menu_help_title">Help</string>
    <string name="radio_label_piz">Pizza Pizza</string>
    <string name="radio_label_domi">Dominos</string>
    <string name="radio_label_nova">Pizza Nova</string>
    <string name="text_label_size">Select Size</string>
    <string name="text_label_type">Select Type</string>
    <string name="text_label_final_pay">Proceed To Pay</string>
    <string name="welcome_msg">Welcome</string>
    <string name="select_a_store_msg">Select A Store</string>
    <string name="piznova_link">https://pizzanova.com</string>
    <string name="domi_link">https://www.dominos.ca/en/</string>
    <string name="pizpiz_link">https://www.pizzapizza.ca</string>

    <string-array name="provinces">
        <item>Ontario</item>
        <item>British Columbia</item>
        <item>Alberta</item>
        <item>Quebec</item>
        <item>Manitoba</item>
        <item>NovaScotia</item>
        <item>New Brunswick</item>
        <item>Prince Edward Island</item>
        <item>Saskatchewan</item>
        <item>Newfoundland and Labrador</item>
    </string-array>
</resources>